# Quant-AlphaForge

./: .gitignore  AGENTS.md  BLOG_PIT_UNIVERSE_OUTLINE.md  CLAUDE.md  LICENSE  Makefile  README.md  RESEARCH_META_SYNTHESIS.md  RESEARCH_WRITEUP.md  SEEDS.md  TIER1_STATUS.txt  ai-engine.js  app.js  backend.js  backtester.js  correlation.js  data.js  execution.js  index.css  index.html  marl.js  scanner.js
alphaforge-crypto/: CLAUDE.md  README.md  requirements.txt  sync_binance_data.py
alphaforge-execution/: .env.template  .halt  CLAUDE.md  config.py  daily_digest_2026-04-18.md  daily_digest_2026-04-21.md  daily_digest_2026-04-24.md  generate_daily_digest.py  latest_digest.md  market_calendar.py  requirements.txt  run_backtest.py  run_daily.sh  run_live.py  smoke_test_alpaca.py  tier1_close_20260425_164113.json  tier1_close_20260425_164123.json  tier1_close_20260425_164129.json  tier1_close_20260425_164140.json
alphaforge-gauntlet/: README.md  pyproject.toml
alphaforge-gauntlet/afgauntlet/: __init__.py  binary.py  bootstrap.py  cross_val.py  deflated.py  gates.py  multiple_testing.py  precommit.py  sharpe.py  version.py
alphaforge-gauntlet/power/: __init__.py  calibrate.py  microstructure_gate.py  run_calibration.py  run_microstructure_gate.py
alphaforge-gauntlet/reports/: _upstreams.py  dsr_variant_divergence.py
alphaforge-gauntlet/tests/: conftest.py  test_binary.py  test_dsr_variants.py  test_golden.py  test_microstructure_gate.py  test_power.py  test_precommit.py  test_reconciliation.py
alphaforge-india/: CLAUDE.md  requirements.txt  still_unmatched.txt
(+1646 files in other folders)
